feat: implement Fibra workflow, stabilize seeding logic, and fix infinite loading in frontend